---------------------------------------------------------------------------------------------------
Version: 0.10.6
Date: 26. 04. 2020
  Bugfixes:
    - Fixed gate conflict with FactorioExtended Plus-Weaponry mod
  Locales:
    - Updated Hungarian translation (thanks to mmnetworkteam)
---------------------------------------------------------------------------------------------------
Version: 0.10.5
Date: 29. 01. 2020
  Bugfixes:
    - Fixed flooring migration issue when adding mod to an existing save game
  Locales:
    - Updated Spanish translation (thanks to notallme)
---------------------------------------------------------------------------------------------------
Version: 0.10.4
Date: 29. 01. 2020
  Added:
    - Support for Factorio 0.18.2 audio changes (thanks to AlienXAXS)
  Changed:
    - Adjusted the vehicle impact sounds of some entities and added more audio variation to match the wider variety now available in the base game
  Bugfixes:
    - Fixed signal icons not being drawn at the correct scale
    - Fixed some items were not showing any icon when using Creative Mod mod
    - Minor compatibility fixes to support version 0.5 of Alien Biomes mod
  Locales:
    - Updated Polish translation (thanks to tomplus)
    - Updated Czech translation (thanks to Treij)
---------------------------------------------------------------------------------------------------
Version: 0.10.3
Date: 28. 01. 2020
  Added:
    - New recipe for upgrading Stone gates to Concrete gates
    - Additional high resolution icons
  Bugfixes:
    - Fixed sprite size issue when playing with Normal resolution sprites (thanks to spandelk)
  Locales:
    - Updated Polish translation (thanks to tomplus)
    - Updated Czech translation (thanks to Treij)
---------------------------------------------------------------------------------------------------
Version: 0.10.2
Date: 25. 01. 2020
  Added:
    - New Stone and Concrete gates along with corresponding Basic and Advanced gates technologies