@@ -117,6 +117,7 @@ DECT.CONFIG.SETTINGS = {
 	["flooring_stack_size"] = settings.startup["dectorio-flooring-stack-size"].value,
 	["landscaping_stack_size"] = settings.startup["dectorio-landscaping-stack-size"].value,
 	["walls_stack_size"] = settings.startup["dectorio-walls-stack-size"].value,
+	["waterfill_mode"] = settings.startup["dectorio-waterfill-mode"].value,
 }
 
 DECT.CONFIG.PAINT_VARIANTS = {
@@ -134,9 +135,15 @@ DECT.CONFIG.GRAVEL_VARIANTS = {
 	{name="copper-ore", color={r=0.64,g=0.46,b=0.45}},
 	{name="coal", color={r=0.33,g=0.33,b=0.33}},
 }
+DECT.CONFIG.WATERFILL_MODES = {
+	["all"] = {"water", "deepwater", "water-green", "deepwater-green"},
+	["shallow"] = {"water", "water-green"},
+	["deep"] = {"deepwater", "deepwater-green"}
+}
+
 -- When changing these tables, the migration scripts need to be adjusted to compensate!
 DECT.CONFIG.BASE_TILES = {"dry-dirt", "dirt-1", "dirt-2", "dirt-3", "dirt-4", "dirt-5", "dirt-6", "dirt-7", "sand-1", "sand-2", "sand-3", "grass-1", "grass-2", "grass-3", "grass-4", "red-desert-0", "red-desert-1", "red-desert-2", "red-desert-3"}
-DECT.CONFIG.BASE_WATER_TILES = {"water", "deepwater", "water-green", "deepwater-green"}
+DECT.CONFIG.BASE_WATER_TILES = DECT.CONFIG.WATERFILL_MODES[DECT.CONFIG.SETTINGS["waterfill_mode"]]
 DECT.CONFIG.BASE_TREES = {"tree-01", "tree-02", "tree-03", "tree-04", "tree-05", "tree-06", "tree-07", "tree-08", "tree-09", "dead-dry-hairy-tree", "dead-grey-trunk", "dead-tree-desert", "dry-hairy-tree", "dry-tree", "tree-02-red", "tree-08-red", "tree-09-red", "tree-06-brown", "tree-08-brown", "tree-09-brown"}
 DECT.CONFIG.BASE_ROCKS = {"rock-huge", "rock-big", "sand-rock-big"}
 DECT.CONFIG.SIGN_CATEGORIES = {"item", "fluid", "tool", "ammo", "armor", "capsule", "gun", "module"}
