@@ -23,6 +23,12 @@ dectorio-decorative-removal-probability=Decoration removal probability
 dectorio-flooring-stack-size=Flooring items stack size
 dectorio-landscaping-stack-size=Landscaping items stack size
 dectorio-walls-stack-size=Wall items stack size
+dectorio-waterfill-mode=Waterfill mode
+
+[string-mod-setting]
+dectorio-waterfill-mode-all=All water tiles
+dectorio-waterfill-mode-shallow=Only shallow water tiles
+dectorio-waterfill-mode-deep=Only deep water tiles
 
 [mod-setting-description]
 dectorio-signals=Enables additional signals for use in lamps or the circuit network
@@ -43,6 +49,7 @@ dectorio-decorative-removal-probability=The probability that decorations, such a
 dectorio-flooring-stack-size=The number of flooring items that can be stacked in one inventory slot (default = 500)
 dectorio-landscaping-stack-size=The number of landscaping items that can be stacked in one inventory slot (default = 500)
 dectorio-walls-stack-size=The number of walls that can be stacked in one inventory slot (default = 200)
+dectorio-waterfill-mode=If waterfill is enabled, this specifies which water tiles are available for placement
 
 [dect-cmd]
 destroy-orphaned-signs=Removes any orphaned signs from the player's current surface.
